# DayNote

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
docs/superpowers/plans/: 2026-06-11-daynote-frontend-plan.md
docs/superpowers/specs/: 2026-06-11-daynote-frontend-design.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  icon.rs  lib.rs  main.rs  monitor.rs  report.rs
src/components/: DatePicker.tsx  LayoutSwitcher.tsx  NavBar.tsx  ScoreRing.tsx  Sidebar.tsx  StatCard.tsx  Timeline.tsx
src/contexts/: AppData.tsx  LayoutContext.tsx
src/layouts/: LayoutDashboard.tsx  LayoutMinimal.tsx  LayoutSidebar.tsx  LayoutWrapper.tsx
src/views/: HistoryView.tsx  MonthlyView.tsx  PomodoroView.tsx  ReportView.tsx  SettingsView.tsx  TodayView.tsx  WeeklyView.tsx
